# GRC-Lab-Template-Kit

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  grc_report_20251102T090919Z.csv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docs/: blog-post.md
examples/: sample_vendors.csv
scripts/: check_aws_creds.sh  deploy.sh  run_report.sh
src/lambda/: index.py
src/lambda/modules/: access_analyzer_findings.py  cloudtrail_findings.py  email_utils.py  iam_findings.py  narrative.py  reporting.py  scp_findings.py  securityhub_findings.py
templates/: access-review-real.yaml  access-review.yaml
tests/unit/: test_sample.py
