[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grc-lab-template"
version = "0.1.0"
description = "Baseline GRC Engineering lab template (AWS Lambda + CFN)"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
